"concurrent DNS resolution" preference has been deprecated and is a no-op. To enable DNS name
resolution some build dependencies must be present (currently c-ares). If that is not the case DNS
name resolution will be disabled (but other name resolution mechanisms, such as host files,
are still available).

//=== Removed Dissectors

=== New File Format Decoding Support

Wireshark is able to display the format of some types of files (rather than
displaying the contents of those files). This is useful when you're curious
about, or debugging, a file and its format.  To open a capture file (such as
PCAP) in this mode specify "MIME Files Format" as the file's format in the
Open File dialog.

New files that Wireshark can open in this mode include:

_Non-empty section placeholder._
--sort-and-group--
--sort-and-group--

=== New Protocol Support
CISCO ERSPAN3 Marker
Nokia Intelligent Service Interface (ISI)
ISO14443
Extensible Control & Management Protocol (eCMP)
RTI TCP Transport Layer (RTITCP)
ITU-T G.7041/Y.1303 Generic Framing Procedure (GFP)
Zigbee Protocol Clusters Dissectors Added (Closures, Lighting, General, Measurement & Sensing, HVAC, Security & Safety)
LAT protocol (DECNET)
Ericsson IPOS Kernel Packet Header Dissector Added (IPOS)
STANAG 5602 SIMPLE
UserLog Protocol
FLEXRAY Protocol dissector added (automotive bus)
USB3 Vision Protocol (USB machine vision cameras)
USBIP Protocol
Open Mobile Alliance Lightweight Machine to Machine TLV payload Added (LwM2M TLV)
Metamako trailers
ISO 8583-1
Bluetooth Pseudoheader for BR/EDR

// Items in --sort-and-group-- blocks will be sorted and comma-separated.
--sort-and-group--
--sort-and-group--

=== Updated Protocol Support

Bluetooth OBEX dissector (btobex) was renamed to Obex Dissector (obex), allow to
DecodeAs it over USB, TCP and UDP.

Too many protocols have been updated to list here.

=== New and Updated Capture File Support
Micropross mplog

//_Non-empty section placeholder._
--sort-and-group--
--sort-and-group--
